<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoonSquad</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Sales</string>
    <string name="title_section2">Wish List</string>
    <string name="title_section3">Friends</string>
    <string name="title_friends">Friends</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="registration_requirements">Username and password must be 4 or more characters in length.</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_friend_email">Friend\'s email</string>
    <string name="prompt_dollar">$</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_item_name">Item name</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_taken_username">This username is taken</string>
    <string name="error_unmatched_password">The passwords do not match</string>

    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>

    <string name="your_email">Your email</string>
    <string name="your_name">Your name</string>
    <string name="friend">friend</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="successful_login">Successful login!</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_registration">Go to Registration</string>
    <string name="setup_database">setup database</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="splashText">Welcome to Shopping with Friends!</string>


</resources>
