<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.teamanything.goonsquad.SalesReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/addRemoveLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/prompt_item_name"
            android:ems="10"
            android:padding="4dp"
            android:layout_weight="1"
            android:id="@+id/editText_Item"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editText_Price"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/prompt_dollar"
            android:ems="10"
            android:id="@+id/editText_Price"
            android:imeOptions="actionDone"
            android:padding="4dp"
            android:layout_weight="4"/>

        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/action_add"
        android:id="@+id/button_add"
        style="?android:attr/buttonBarButtonStyle" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:padding="4dp"/>

</LinearLayout>
