<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.teamanything.goonsquad.WelcomeActivity"
    android:background="#ad6b9fd1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:id="@+id/go_to_sign_in_button"
        android:onClick="openLoginActivity"
        android:layout_centerVertical="true"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@drawable/button"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/go_to_registration_button"
        android:layout_alignStart="@+id/go_to_registration_button"
        android:layout_alignRight="@+id/go_to_registration_button"
        android:layout_alignEnd="@+id/go_to_registration_button"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_registration"
        android:id="@+id/go_to_registration_button"
        android:onClick="openRegistrationActivity"
        android:layout_below="@+id/go_to_sign_in_button"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@drawable/button"
        android:textColor="#000000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_database"
        android:id="@+id/button_setup_database"
        android:onClick="setupDatabase"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@drawable/button"
        android:textColor="#000000" />

</RelativeLayout>
