 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
    tools:context="com.teamanything.goonsquad.WishListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/addRemoveLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_item_name"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/editText_Price"
                    android:ems="10"
                    android:id="@+id/editText_Item"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/prompt_dollar"
                    android:imeOptions="actionDone"
                    android:ems="10"
                    android:id="@+id/editText_Price"
                    android:padding="4dp"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/action_add"
                    android:layout_weight="50"
                    android:id="@+id/button_add"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button"
                    android:textColor="#000000"
                    android:layout_marginRight="2.5dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/action_remove"
                    android:layout_weight="50"
                    android:id="@+id/button_remove"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button"
                    android:textColor="#000000"
                    android:layout_marginLeft="2.5dp" />

            </LinearLayout>
        </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:paddingTop="8dp"
        android:padding="4dp"/>


</LinearLayout>
